...
                                <rect key="frame" x="8" y="20" width="50" height="32"/>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="50" id="JQS-Vf-Mmc"/>
                                </constraints>
                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
                                <state key="normal" title="Close"/>
                                <connections>
                                    <action selector="closePressed:" destination="Yta-IZ-6hd" eventType="touchUpInside" id="3lD-hj-47j"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
...
                                        <nil key="textColor"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <segmentedControl opaque="NO" contentMode="scaleToFill" restorationIdentifier="SegControl" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="A9l-06-Cej">
                                        <rect key="frame" x="8" y="28" width="359" height="29"/>
                                        <segments>
                                            <segment title="City"/>
                                            <segment title="Auther"/>
                                            <segment title="Book"/>
                                            <segment title="Geolocation"/>
                                        </segments>
                                        <connections>
                                            <action selector="segChangedValue:" destination="BYZ-38-t0r" eventType="valueChanged" id="vcW-yg-baZ"/>
                                        </connections>
                                    </segmentedControl>
                                    <searchBar contentMode="redraw" restorationIdentifier="SearchBar" searchBarStyle="minimal" placeholder="Search" translatesAutoresizingMaskIntoConstraints="NO" id="jDn-40-iii">
                                        <rect key="frame" x="0.0" y="60" width="375" height="44"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </searchBar>
                                </subviews>
                                <constraints>
                                    <constraint firstAttribute="trailing" secondItem="jDn-40-iii" secondAttribute="trailing" id="Rct-O7-Qkx"/>
...
